--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: universal-ctags
 Section: editors
 Priority: optional
 Maintainer: Alessandro Ghedini <ghedo@debian.org>
-Build-Depends: debhelper (>= 11), autoconf, automake, pkg-config
+Build-Depends: debhelper (>= 11), autoconf, automake, pkg-config,
+  libxml2-dev, libjansson-dev, libseccomp-dev, libyaml-dev,
+  libaspell-dev, aspell-en
 Standards-Version: 4.1.3
 Vcs-Git: https://salsa.debian.org/debian/universal-ctags.git
 Vcs-Browser: https://salsa.debian.org/debian/universal-ctags
