--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Alessandro Ghedini <ghedo@debian.org>
 Build-Depends: debhelper (>= 11), autoconf, automake, pkg-config,
   libxml2-dev, libjansson-dev, libseccomp-dev, libyaml-dev,
-  libaspell-dev, aspell-en, python3-docutils
+  python3-docutils
 Standards-Version: 4.1.3
 Vcs-Git: https://salsa.debian.org/debian/universal-ctags.git
 Vcs-Browser: https://salsa.debian.org/debian/universal-ctags
