--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: universal-ctags
 Section: editors
 Priority: optional
 Maintainer: Alessandro Ghedini <ghedo@debian.org>
-Build-Depends: debhelper (>= 9), autoconf, automake, pkg-config,
+Build-Depends: debhelper (>= 9), dh-autoreconf, autoconf, automake, pkg-config,
   libxml2-dev, libjansson-dev, libseccomp-dev, libyaml-dev,
   python3-docutils
 Standards-Version: 4.1.3
